# TP-avions

./: CMakeLists.txt  main.cpp  main_tests.cpp
include/: Avion.h  AvionEnnemi.h
src/: AvionAmi.cpp  AvionEnnemi.cpp  main.cpp
